<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TeeViewer</string>
    <string name="action_settings">Settings</string>
    <string name="action_update">Refresh</string>
    <string name="action_edit">Edit</string>
    <string name="Loading">Loading</string>
    <string name="title_activity_server">ServerActivity</string>
    <string name="add_server">Add Server</string>
    <string name="edit_server">Edit Server</string>
    <string name="name">Name:</string>
    <string name="ip">IP or domain:</string>
    <string name="port">Port:</string>
    <string name="ename">Enter Name</string>
    <string name="eip">Enter IP</string>
    <string name="eport">Enter Port</string>
    <string name="add">OK</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="menu">Menu</string>
    <string name="widget_name_2">TeeViewer widget 2x1</string>
    <string name="widget_name_4">TeeViewer widget 4x1</string>
    
    <string name="title_activity_widget">TeeViewer widget</string>
	
	<string name="cant_reach">Can\'t reach the server</string>
</resources>
