<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	
    <item
        android:id="@+id/action_update"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_rotate"
        android:title="@string/action_update"
        />
     <item
        android:id="@+id/action_add_server"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/add_server"
        android:icon="@android:drawable/ic_menu_add"
        />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        />

</menu>
