<LinearLayout
	    xmlns:android="http://schemas.android.com/apk/res/android"
    	xmlns:tools="http://schemas.android.com/tools"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:paddingBottom="@dimen/activity_vertical_margin"
    	android:paddingLeft="@dimen/activity_horizontal_margin"
    	android:paddingRight="@dimen/activity_horizontal_margin"
    	android:paddingTop="@dimen/activity_vertical_margin"
	    android:orientation="vertical"
        android:layout_alignParentBottom="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentTop="false"
>

   <!-- <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <EditText
        android:id="@+id/dialog_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ename" >
        
        <requestFocus />
      </EditText> -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ip" />

    <EditText
        android:id="@+id/dialog_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/eip" 
        android:inputType="text"
        android:imeOptions="actionNext">

    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/port" />

    <EditText
        android:id="@+id/dialog_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/eport"
        android:inputType="number" 
        android:imeOptions="actionDone"/>
	
</LinearLayout>